Production.conf updated

--- a/conf/production.conf
+++ b/conf/production.conf
@@ -3,4 +3,4 @@ http.port=$PORT
 applyEvolutions.default=true
 
 db.default.driver=org.postgresql.Driver
-db.default.url=${DATABASE_URL}
+# db.default.url=${DATABASE_URL}
