--- a/conf/production.conf
+++ b/conf/production.conf
@@ -1,6 +1,6 @@
-http.port=$PORT
+http.port=${PORT}
 
 applyEvolutions.default=true
 
 db.default.driver=org.postgresql.Driver
-# db.default.url=${DATABASE_URL}
+db.default.url=${DATABASE_URL}
