Mongo's in da house

--- a/conf/production.conf
+++ b/conf/production.conf
@@ -1,6 +1,5 @@
 http.port=${PORT}
 
-applyEvolutions.default=true
+applyEvolutions.default=false
 
-db.default.driver=org.postgresql.Driver
-db.default.url=${DATABASE_URL}
+mongodb.uri=$MONGOHQ_URL
