--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,13 +33,13 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play;MODE=PostgreSQL;DB_CLOSE_DELAY=-1"
-db.default.user=sa
-db.default.password=""
+# db.default.driver=org.h2.Driver
+# db.default.url="jdbc:h2:mem:play;MODE=PostgreSQL;DB_CLOSE_DELAY=-1"
+# db.default.user=sa
+# db.default.password=""
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
-db.default.jndiName=DefaultDS
+# db.default.jndiName=DefaultDS
 
 # Evolutions
 # ~~~~~
@@ -67,3 +67,5 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+# mongodb://[username:password@]host1[:port1][,hostN[:portN]]/dbName
+mongodb.uri="mongodb://localhost:27017/dailysoccer"
