--- a/conf/application.conf
+++ b/conf/application.conf
@@ -68,4 +68,4 @@ logger.play=INFO
 logger.application=DEBUG
 
 # mongodb://[username:password@]host1[:port1][,hostN[:portN]]/dbName
-mongodb.uri="mongodb://localhost:27017/dailysoccer"
+mongodb.uri="mongodb://localhost:27017/dailySoccerDB"
