--- a/conf/application.conf
+++ b/conf/application.conf
@@ -37,6 +37,10 @@ application.router=backend.Routes
 # db.default.url="jdbc:h2:mem:play;MODE=PostgreSQL;DB_CLOSE_DELAY=-1"
 # db.default.user=sa
 # db.default.password=""
+db.optadb.driver=org.posgresql.Driver
+db.optadb.url="jdbc:postgresql://localhost/optadb_dev"
+db.optadb.user=postgres
+db.optadb.password=postgres
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
