--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,7 +38,7 @@ application.router=backend.Routes
 # db.default.user=sa
 # db.default.password=""
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost/optadb"
+db.default.url="jdbc:postgresql://localhost/dailysoccerdb"
 db.default.user=postgres
 db.default.password=postgres
 #
