Options to retry db connection

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,6 +41,19 @@ db.default.driver=org.postgresql.Driver
 db.default.url="jdbc:postgresql://localhost/dailysoccerdb"
 db.default.user=postgres
 db.default.password=postgres
+
+# After attempting to acquire a connection and failing, try to
+# connect this number of times before giving up.
+db.default.acquireRetryAttempts=10
+
+# How long to wait before attempting to obtain a
+# connection again after a failure.
+db.default.acquireRetryDelay=5 seconds
+
+# The maximum time to wait before a call
+# to getConnection is timed out.
+db.default.connectionTimeout=1 second
+
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
