--- a/conf/production.conf
+++ b/conf/production.conf
@@ -4,3 +4,8 @@ include "application.conf"
 applyEvolutions.default=false
 
 mongodb.uri=${MONGOHQ_URL}
+
+#db.default.url=${HEROKU_POSTGRESQL_ROSE_URL}
+db.default.url=${DATABASE_URL}
+db.default.user=None
+db.default.password=None
