Staging DB conf and DB import script

--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -4,3 +4,7 @@ include "application.conf"
 applyEvolutions.default=false
 
 mongodb.uri=${MONGOHQ_URL}
+
+db.default.user=None
+db.default.password=None
+db.default.url=${DATABASE_URL}
