Changed conf to add user and password in url

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,9 +38,7 @@ application.router=backend.Routes
 # db.default.user=sa
 # db.default.password=""
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost/dailysoccerdb"
-db.default.user=postgres
-db.default.password=postgres
+db.default.url="jdbc:postgresql://localhost/dailysoccerdb?user=postgres&password=postgres"
 
 # After attempting to acquire a connection and failing, try to
 # connect this number of times before giving up.
