--- a/conf/application.conf
+++ b/conf/application.conf
@@ -88,4 +88,4 @@ mongodb.uri="mongodb://localhost:27017/dailySoccerDB"
 
 # De momento ponemos max-age a 0 para que interrogue al servidor cada vez que se pulse Refresh o Enter
 # Recordar que: Si max-age!= 0, "refresh" siempre manda requests de nuevo al servidor, pero "enter" no.
-http.cacheControl=0
+assets.defaultCache="max-age=0"
