Quitamos un log innecesario. Añadimos comentario.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -88,4 +88,5 @@ mongodb.uri="mongodb://localhost:27017/dailySoccerDB"
 
 # De momento ponemos max-age a 0 para que interrogue al servidor cada vez que se pulse Refresh o Enter
 # Recordar que: Si max-age!= 0, "refresh" siempre manda requests de nuevo al servidor, pero "enter" no.
+# Respecto al CDN, usamos el TTL de cloudfront para configurar cada cuanto interroga a nuestro server.
 assets.defaultCache="max-age=0"
