--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -6,3 +6,7 @@ applyEvolutions.default=false
 mongodb.uri=${MONGOHQ_URL}
 
 db.default.url=${DATABASE_URL}
+
+stormpath.id=${STORMPATH_ID}
+
+stormpath.secret=${STORMPATH_SECRET}
