--- a/conf/production.conf
+++ b/conf/production.conf
@@ -10,3 +10,6 @@ db.default.url=${DATABASE_URL}
 stormpath.id=${STORMPATH_ID}
 
 stormpath.secret=${STORMPATH_SECRET}
+
+heroku_key=${HEROKU_API_KEY}
+heroku_app=${HEROKU_APP_NAME}
