--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -6,3 +6,6 @@ applyEvolutions.default=false
 mongodb.uri=${MONGOHQ_URL}
 
 db.default.url=${DATABASE_URL}
+
+heroku_key=${HEROKU_API_KEY}
+heroku_app=${HEROKU_APP_NAME}
