--- a/conf/application.conf
+++ b/conf/application.conf
@@ -90,3 +90,5 @@ mongodb.uri="mongodb://localhost:27017/dailySoccerDB"
 # Recordar que: Si max-age!= 0, "refresh" siempre manda requests de nuevo al servidor, pero "enter" no.
 # Respecto al CDN, usamos el TTL de cloudfront para configurar cada cuanto interroga a nuestro server.
 assets.defaultCache="max-age=0"
+
+activate_players_by_default=true
