--- a/conf/production.conf
+++ b/conf/production.conf
@@ -13,3 +13,5 @@ stormpath.secret=${STORMPATH_SECRET}
 
 heroku_key=${HEROKU_API_KEY}
 heroku_app=${HEROKU_APP_NAME}
+
+activate_players_by_default=false
