--- a/conf/application.conf
+++ b/conf/application.conf
@@ -91,4 +91,6 @@ mongodb.uri="mongodb://localhost:27017/dailySoccerDB"
 # Respecto al CDN, usamos el TTL de cloudfront para configurar cada cuanto interroga a nuestro server.
 assets.defaultCache="max-age=0"
 
+applyEvolutions.default=false
+
 activate_players_by_default=true
