--- a/conf/application.conf
+++ b/conf/application.conf
@@ -60,7 +60,7 @@ db.default.url="jdbc:postgresql://localhost/dailysoccerdb?user=postgres&password
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# evolutionplugin=disabled
+evolutionplugin=disabled
 
 # Ebean configuration
 # ~~~~~
@@ -90,7 +90,5 @@ mongodb.uri="mongodb://localhost:27017/dailySoccerDB"
 # Recordar que: Si max-age!= 0, "refresh" siempre manda requests de nuevo al servidor, pero "enter" no.
 # Respecto al CDN, usamos el TTL de cloudfront para configurar cada cuanto interroga a nuestro server.
 assets.defaultCache="max-age=0"
-
-applyEvolutions.default=false
 
 activate_players_by_default=true
