Faltaba un comentario

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
+# Este fichero son las variables de entorno usadas por 'foreman start' para configurar nuestro desarrollo
+# local como si estuvieramos en Heroku production.
 CONFIG_FILE="production.conf"
 DATABASE_URL="jdbc:postgresql://localhost/dailysoccerdb?user=postgres&password=postgres"
 JAVA_OPTS="-Xms768m -Xmx768m -Xmn192m -Xss512k -XX:+UseCompressedOops"
