Default production salary to -1

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -92,4 +92,4 @@ mongodb.uri="mongodb://localhost:27017/dailySoccerDB"
 assets.defaultCache="max-age=0"
 
 activate_players_by_default=true
-base_salary=0
+debug_salary=false
