Volvemos a hacer funcionar foreman_start

--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,7 @@ CONFIG_FILE="production.conf"
 DATABASE_URL="jdbc:postgresql://localhost/dailysoccerdb?user=postgres&password=postgres"
 JAVA_OPTS="-Xms768m -Xmx768m -Xmn192m -Xss512k -XX:+UseCompressedOops"
 MONGOHQ_URL="mongodb://localhost:27017/dailySoccerDB"
-NEW_RELIC_APP_NAME="Daily Soccer Development"
-NEW_RELIC_LICENSE_KEY="82c84c6a8fbeddaa6f4b9c2401a75780fdb27704"
-NEW_RELIC_LOG="stdout"
+HEROKU_API_KEY=XXXXXXXX-XXXX-XXX-XXXX-XXXXXXXXXXXX
+HEROKU_APP_NAME=dailysoccer-local
+STORMPATH_ID=XXXX
+STORMPATH_SECRET=XXXX
