Initial test of API POST, JSON from POJO

--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -15,3 +15,6 @@ rabbitmq=${CLOUDAMQP_URL}
 botSystem.targetUrl = "http://dailysoccer-staging.herokuapp.com"
 botSystem.numBots = 100
 botSystem.tickInterval = 1000
+
+mandrill_key=${MANDRILL_APIKEY}
+mandrill_username=${MANDRILL_USERNAME}
