--- a/conf/production.conf
+++ b/conf/production.conf
@@ -17,5 +17,8 @@ botSystem.targetUrl = "http://backend.epiceleven.com"
 botSystem.numBots = 100
 botSystem.tickInterval = 5000
 
+mandrill_key=${MANDRILL_APIKEY}
+mandrill_username=${MANDRILL_USERNAME}
+
 activate_players_by_default=false
 debug_salary=false
