--- a/conf/production.conf
+++ b/conf/production.conf
@@ -2,15 +2,15 @@
 include "application.conf"
 
 mongodb.uri=${MONGOHQ_URL}
-
 db.default.url=${DATABASE_URL}
 
 stormpath.id=${STORMPATH_ID}
-
 stormpath.secret=${STORMPATH_SECRET}
 
 heroku_key=${HEROKU_API_KEY}
 heroku_app=${HEROKU_APP_NAME}
+
+rabbitmq=${CLOUDAMQP_URL}
 
 activate_players_by_default=false
 debug_salary=false
