--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -2,8 +2,9 @@
 include "application.conf"
 
 mongodb.uri=${MONGOHQ_URL}
-
 db.default.url=${DATABASE_URL}
 
 heroku_key=${HEROKU_API_KEY}
 heroku_app=${HEROKU_APP_NAME}
+
+rabbitmq=${CLOUDAMQP_URL}
