--- a/conf/application.conf
+++ b/conf/application.conf
@@ -92,5 +92,12 @@ mongodb.uri="mongodb://localhost:27017/dailySoccerDB"
 # Respecto al CDN, usamos el TTL de cloudfront para configurar cada cuanto interroga a nuestro server.
 assets.defaultCache="max-age=0"
 
+akka {
+  # Log the complete configuration at INFO level when the actor system is started.
+  # This is useful when you are uncertain of what configuration is used.
+  # log-config-on-start = on
+}
+
+
 activate_players_by_default=true
 debug_salary=true
