Leer targetUrl en los bots del .conf

--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -8,3 +8,5 @@ heroku_key=${HEROKU_API_KEY}
 heroku_app=${HEROKU_APP_NAME}
 
 rabbitmq=${CLOUDAMQP_URL}
+
+botActor.targetUrl = "http://dailysoccer-staging.herokuapp.com"
