--- a/conf/application.conf
+++ b/conf/application.conf
@@ -98,6 +98,8 @@ akka {
   # log-config-on-start = on
 }
 
+# La url a la que atacaran nuestros bots para hacer su cosa de bots
+botActor.targetUrl = "http://localhost:9000"
 
 activate_players_by_default=true
 debug_salary=true
