--- a/conf/production.conf
+++ b/conf/production.conf
@@ -12,7 +12,7 @@ heroku_app=${HEROKU_APP_NAME}
 
 rabbitmq=${CLOUDAMQP_URL}
 
-botActor.targetUrl = "http://www.epiceleven.com"
+botActor.targetUrl = "http://backend.epiceleven.com"
 
 activate_players_by_default=false
 debug_salary=false
