Configurando stormpath en staging

--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -4,6 +4,9 @@ include "application.conf"
 mongodb.uri=${MONGOHQ_URL}
 db.default.url=${DATABASE_URL}
 
+stormpath.id=${STORMPATH_ID}
+stormpath.secret=${STORMPATH_SECRET}
+
 heroku_key=${HEROKU_API_KEY}
 heroku_app=${HEROKU_APP_NAME}
 
