--- a/conf/application.conf
+++ b/conf/application.conf
@@ -101,5 +101,8 @@ akka {
 # La url a la que atacaran nuestros bots para hacer su cosa de bots
 botActor.targetUrl = "http://localhost:9000"
 
+# El conejo encolador de mensajes
+rabbitmq = "amqp://guest:guest@localhost"
+
 activate_players_by_default=true
 debug_salary=true
