Read Stormpath directory enum value from config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -106,3 +106,5 @@ rabbitmq = "amqp://guest:guest@localhost"
 
 activate_players_by_default=true
 debug_salary=true
+
+stormpath.directory="STAGING"
