--- a/conf/application.conf
+++ b/conf/application.conf
@@ -127,3 +127,5 @@ stormpath.directories =
   }
 
 stormpath.currentDirectory = ${stormpath.directories.STAGING}
+
+mandrill_key="r-aNtJFwBFub3r5U73RXoA"
