Changed Stormpath client in order to store directory configs in application.conf

--- a/conf/production.conf
+++ b/conf/production.conf
@@ -6,7 +6,7 @@ db.default.url=${DATABASE_URL}
 
 stormpath.id=${STORMPATH_ID}
 stormpath.secret=${STORMPATH_SECRET}
-stormpath.directory="PRODUCTION"
+stormpath.currentDirectory = ${stormpath.directories.PRODUCTION}
 
 heroku_key=${HEROKU_API_KEY}
 heroku_app=${HEROKU_APP_NAME}
