--- a/conf/application.conf
+++ b/conf/application.conf
@@ -107,4 +107,16 @@ rabbitmq = "amqp://guest:guest@localhost"
 activate_players_by_default=true
 debug_salary=true
 
-stormpath.directory="STAGING"
+stormpath.directories =
+  {"PRODUCTION" = { name = "EpicEleven Directory",
+                    description = "Main Epic Eleven Directory",
+                    accountStoreId = "3AHd93zqqqEX5DPV21nSWe"
+                  }
+  ,
+  "STAGING" = { name = "Staging Directory",
+                 description = "Directory for Testing purposes",
+                 accountStoreId = "6lQ40xohPzA6pVDRsgvcbv"
+               }
+  }
+
+stormpath.currentDirectory = ${stormpath.directories.STAGING}
