Configuracion de los bots externalizada

--- a/conf/production.conf
+++ b/conf/production.conf
@@ -13,7 +13,9 @@ heroku_app=${HEROKU_APP_NAME}
 
 rabbitmq=${CLOUDAMQP_URL}
 
-botActor.targetUrl = "http://backend.epiceleven.com"
+botSystem.targetUrl = "http://backend.epiceleven.com"
+botSystem.numBots = 100
+botSystem.tickInterval = 30000
 
 activate_players_by_default=false
 debug_salary=false
