--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -12,4 +12,6 @@ heroku_app=${HEROKU_APP_NAME}
 
 rabbitmq=${CLOUDAMQP_URL}
 
-botActor.targetUrl = "http://dailysoccer-staging.herokuapp.com"
+botSystem.targetUrl = "http://dailysoccer-staging.herokuapp.com"
+botSystem.numBots = 100
+botSystem.tickInterval = 1000
