--- a/conf/application.conf
+++ b/conf/application.conf
@@ -98,8 +98,15 @@ akka {
   # log-config-on-start = on
 }
 
-# La url a la que atacaran nuestros bots para hacer su cosa de bots
-botActor.targetUrl = "http://localhost:9000"
+botSystem {
+  targetUrl = "http://localhost:9000" // # La url a la que atacaran nuestros bots para hacer su cosa de bots
+  numBots = 30                        // Hasta 100
+  tickInterval = 1000                 // Frecuencia de tick en milliseconds
+  tickMode = "NORMAL_TICK"            // "NORMAL_TICK", "AGGRESSIVE_TICK"
+  personality = "PRODUCTION"          // "PRODUCTION", "BERSERKER"
+  cyclePersonalities = false          // Ciclar por todas las personalidades
+  cyclePersonalitiesInterval = 60000  // Cada cuando cambiamos a la siguiente personalidad en milliseconds
+}
 
 # El conejo encolador de mensajes
 rabbitmq = "amqp://guest:guest@localhost"
