Renamed to NotificationActor and env vars taken in prod and staging

--- a/conf/production.conf
+++ b/conf/production.conf
@@ -17,7 +17,7 @@ botSystem.targetUrl = "http://backend.epiceleven.com"
 botSystem.numBots = 100
 botSystem.tickInterval = 5000
 
-mandrill_key="r-aNtJFwBFub3r5U73RXoA" //${MANDRILL_APIKEY}
+mandrill_key=${MANDRILL_APIKEY}
 mandrill_username=${MANDRILL_USERNAME}
 
 activate_players_by_default=false
