--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -16,5 +16,5 @@ botSystem.targetUrl = "http://dailysoccer-staging.herokuapp.com"
 botSystem.numBots = 100
 botSystem.tickInterval = 1000
 
-mandrill_key="r-aNtJFwBFub3r5U73RXoA" //${MANDRILL_APIKEY}
+mandrill_key=${MANDRILL_APIKEY}
 mandrill_username=${MANDRILL_USERNAME}
