--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,4 @@ HEROKU_API_KEY=XXXXXXXX-XXXX-XXX-XXXX-XXXXXXXXXXXX
 HEROKU_APP_NAME=dailysoccer-local
 STORMPATH_ID=XXXX
 STORMPATH_SECRET=XXXX
+CLOUDAMQP_URL=XXXX
