Pongo Logger.debug, mejor recorrido del map, hacer funcionar foreman_start

--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,5 @@ HEROKU_APP_NAME=dailysoccer-local
 STORMPATH_ID=XXXX
 STORMPATH_SECRET=XXXX
 CLOUDAMQP_URL=XXXX
+MANDRILL_APIKEY=XXXXXX
+MANDRILL_USERNAME=XXXXXX
