--- a/conf/production.conf
+++ b/conf/production.conf
@@ -13,9 +13,11 @@ heroku_app=${HEROKU_APP_NAME}
 
 rabbitmq=${CLOUDAMQP_URL}
 
-botSystem.targetUrl = "http://backend.epiceleven.com"
-botSystem.numBots = 100
-botSystem.tickInterval = 5000
+botSystemActor.targetUrl = "http://backend.epiceleven.com"
+botSystemActor.numBots = 100
+botSystemActor.tickInterval = 5000
+
+optaProcessorActor.autoStart = true
 
 mandrill_key=${MANDRILL_APIKEY}
 mandrill_username=${MANDRILL_USERNAME}
