--- a/conf/application.conf
+++ b/conf/application.conf
@@ -98,7 +98,7 @@ akka {
   # log-config-on-start = on
 }
 
-botSystem {
+botSystemActor {
   targetUrl = "http://localhost:9000" // # La url a la que atacaran nuestros bots para hacer su cosa de bots
   numBots = 30                        // Hasta 100
   tickInterval = 500                  // Frecuencia de tick en milliseconds
@@ -106,6 +106,11 @@ botSystem {
   personality = "PRODUCTION"          // "PRODUCTION", "BERSERKER"
   cyclePersonalities = false          // Ciclar por todas las personalidades
   cyclePersonalitiesInterval = 60000  // Cada cuando cambiamos a la siguiente personalidad en milliseconds
+  autoStart = false
+}
+
+optaProcessorActor {
+  autoStart = false
 }
 
 # El conejo encolador de mensajes
