--- a/conf/application.conf
+++ b/conf/application.conf
@@ -110,7 +110,19 @@ botSystemActor {
 }
 
 optaProcessorActor {
-  autoStart = false
+  autoStart = true
+}
+
+contestsActor {
+  autoStart = true
+}
+
+notificationActor {
+  autoStart = true
+}
+
+transactionsActor {
+  autoStart = true
 }
 
 # El conejo encolador de mensajes
