--- a/conf/application.conf
+++ b/conf/application.conf
@@ -109,21 +109,26 @@ botSystemActor {
   autoStart = false
 }
 
+transactionsActor {
+  autoStart = true
+  tickInterval = 1 second
+}
+
 optaProcessorActor {
   autoStart = true
+  tickInterval = 3 seconds
 }
 
 contestsActor {
   autoStart = true
+  tickInterval = 1 minute
 }
 
 notificationActor {
   autoStart = true
+  tickInterval = 30 minutes
 }
 
-transactionsActor {
-  autoStart = true
-}
 
 # El conejo encolador de mensajes
 rabbitmq = "amqp://guest:guest@localhost"
