--- a/conf/production.conf
+++ b/conf/production.conf
@@ -16,8 +16,13 @@ rabbitmq=${CLOUDAMQP_URL}
 botSystemActor.targetUrl = "http://backend.epiceleven.com"
 botSystemActor.numBots = 100
 botSystemActor.tickInterval = 5000
+botSystemActor.autoStart = false
 
+transactionsActor.autoStart = true
 optaProcessorActor.autoStart = true
+contestsActor.autoStart = true
+notificationActor.autoStart = true
+
 
 mandrill_key=${MANDRILL_APIKEY}
 mandrill_username=${MANDRILL_USERNAME}
