--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -16,8 +16,13 @@ rabbitmq=${CLOUDAMQP_URL}
 botSystemActor.targetUrl = "http://dailysoccer-staging.herokuapp.com"
 botSystemActor.numBots = 100
 botSystemActor.tickInterval = 1000
+botSystemActor.autoStart = true
 
+transactionsActor.autoStart = true
 optaProcessorActor.autoStart = true
+contestsActor.autoStart = true
+notificationActor.autoStart = true
+
 
 mandrill_key=${MANDRILL_APIKEY}
 mandrill_username=${MANDRILL_USERNAME}
