Tiempos correctamente configurables en botSystemActor

--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -15,7 +15,7 @@ rabbitmq=${CLOUDAMQP_URL}
 
 botSystemActor.targetUrl = "http://dailysoccer-staging.herokuapp.com"
 botSystemActor.numBots = 100
-botSystemActor.tickInterval = 1000
+botSystemActor.tickInterval = 1 second
 botSystemActor.autoStart = true
 
 transactionsActor.autoStart = true
