--- a/conf/application.conf
+++ b/conf/application.conf
@@ -99,13 +99,13 @@ akka {
 }
 
 botSystemActor {
-  targetUrl = "http://localhost:9000" // # La url a la que atacaran nuestros bots para hacer su cosa de bots
-  numBots = 30                        // Hasta 100
-  tickInterval = 500                  // Frecuencia de tick en milliseconds
-  tickMode = "NORMAL_TICK"            // "NORMAL_TICK", "AGGRESSIVE_TICK"
-  personality = "PRODUCTION"          // "PRODUCTION", "BERSERKER"
-  cyclePersonalities = false          // Ciclar por todas las personalidades
-  cyclePersonalitiesInterval = 60000  // Cada cuando cambiamos a la siguiente personalidad en milliseconds
+  targetUrl = "http://localhost:9000"    // # La url a la que atacaran nuestros bots para hacer su cosa de bots
+  numBots = 30                           // Hasta 100
+  tickInterval = 500 ms                  // Frecuencia de tick
+  tickMode = "NORMAL_TICK"               // "NORMAL_TICK", "AGGRESSIVE_TICK"
+  personality = "PRODUCTION"             // "PRODUCTION", "BERSERKER"
+  cyclePersonalities = false             // Ciclar por todas las personalidades
+  cyclePersonalitiesInterval = 1 minute  // Cada cuando cambiamos a la siguiente personalidad
   autoStart = false
 }
 
