--- a/conf/production.conf
+++ b/conf/production.conf
@@ -15,7 +15,7 @@ rabbitmq=${CLOUDAMQP_URL}
 
 botSystemActor.targetUrl = "http://backend.epiceleven.com"
 botSystemActor.numBots = 100
-botSystemActor.tickInterval = 5000
+botSystemActor.tickInterval = 5 seconds
 botSystemActor.autoStart = false
 
 transactionsActor.autoStart = true
