--- a/conf/application.conf
+++ b/conf/application.conf
@@ -115,7 +115,7 @@ transactionsActor {
 }
 
 optaProcessorActor {
-  autoStart = true
+  autoStart = false
   tickInterval = 3 seconds
 }
 
@@ -125,7 +125,7 @@ contestsActor {
 }
 
 notificationActor {
-  autoStart = true
+  autoStart = false
   tickInterval = 30 minutes
 }
 
