Bots activos por defecto en produccion

--- a/conf/production.conf
+++ b/conf/production.conf
@@ -16,7 +16,7 @@ rabbitmq=${CLOUDAMQP_URL}
 botSystemActor.targetUrl = "http://backend.epiceleven.com"
 botSystemActor.numBots = 100
 botSystemActor.tickInterval = 5 seconds
-botSystemActor.autoStart = false
+botSystemActor.autoStart = true
 
 transactionsActor.autoStart = true
 optaProcessorActor.autoStart = true
