Ajuste conf de staging

--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -16,12 +16,12 @@ rabbitmq=${CLOUDAMQP_URL}
 botSystemActor.targetUrl = "http://dailysoccer-staging.herokuapp.com"
 botSystemActor.numBots = 100
 botSystemActor.tickInterval = 1 second
-botSystemActor.autoStart = true
+botSystemActor.autoStart = false
 
 transactionsActor.autoStart = true
-optaProcessorActor.autoStart = true
+optaProcessorActor.autoStart = false
 contestsActor.autoStart = true
-notificationActor.autoStart = true
+notificationActor.autoStart = false
 
 
 mandrill_key=${MANDRILL_APIKEY}
