Problemas con las fechas en los tests

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -111,7 +111,7 @@ botSystemActor {
 
 transactionsActor {
   autoStart = true
-  tickInterval = 1 second
+  tickInterval = 1 minute
 }
 
 optaProcessorActor {
