RefresherActor, faltaria poderlo apagar/encender desde el interfaz

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -129,6 +129,11 @@ notificationActor {
   tickInterval = 30 minutes
 }
 
+refresherActor {
+  autoStart = false
+  tickInterval = 10 minutes
+}
+
 
 # El conejo encolador de mensajes
 rabbitmq = "amqp://guest:guest@localhost"
