--- a/conf/production.conf
+++ b/conf/production.conf
@@ -23,6 +23,8 @@ optaProcessorActor.autoStart = true
 contestsActor.autoStart = true
 notificationActor.autoStart = true
 
+refresherActor.autoStart = false  # Por supuesto en produccion no queremos que este actor se tickee
+
 
 mandrill_key=${MANDRILL_APIKEY}
 mandrill_username=${MANDRILL_USERNAME}
