--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -23,6 +23,8 @@ optaProcessorActor.autoStart = false
 contestsActor.autoStart = true
 notificationActor.autoStart = false
 
+refresherActor.autoStart = true
+
 
 mandrill_key=${MANDRILL_APIKEY}
 mandrill_username=${MANDRILL_USERNAME}
