Adios a la perversa feature "setTargetEnvironment"

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -156,3 +156,6 @@ stormpath.directories =
 stormpath.currentDirectory = ${stormpath.directories.STAGING}
 
 mandrill_key="r-aNtJFwBFub3r5U73RXoA"
+
+// Ejecutamos siempre en nuestra maquina local, pero tenemos la opcion de leer/escribir en otros entornos.
+targetEnvironment="LOCALHOST"     // LOCALHOST, STAGING, PRODUCTION
