--- a/conf/production.conf
+++ b/conf/production.conf
@@ -25,9 +25,10 @@ notificationActor.autoStart = true
 
 refresherActor.autoStart = false  # Por supuesto en produccion no queremos que este actor se tickee
 
-
 mandrill_key=${MANDRILL_APIKEY}
 mandrill_username=${MANDRILL_USERNAME}
 
 activate_players_by_default=false
 debug_salary=false
+
+targetEnvironment="LOCALHOST"     // LOCALHOST, STAGING, PRODUCTION
