--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -25,6 +25,7 @@ notificationActor.autoStart = false
 
 refresherActor.autoStart = true
 
-
 mandrill_key=${MANDRILL_APIKEY}
 mandrill_username=${MANDRILL_USERNAME}
+
+targetEnvironment="LOCALHOST"     // LOCALHOST, STAGING, PRODUCTION
