Reverted application.conf bot mode from berserker

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -103,7 +103,7 @@ botSystemActor {
   numBots = 30                           // Hasta 100
   tickInterval = 500 ms                  // Frecuencia de tick
   tickMode = "NORMAL_TICK"               // "NORMAL_TICK", "AGGRESSIVE_TICK"
-  personality = "BERSERKER"             // "PRODUCTION", "BERSERKER"
+  personality = "PRODUCTION"             // "PRODUCTION", "BERSERKER"
   cyclePersonalities = false             // Ciclar por todas las personalidades
   cyclePersonalitiesInterval = 1 minute  // Cada cuando cambiamos a la siguiente personalidad
   autoStart = false
