--- a/conf/application.conf
+++ b/conf/application.conf
@@ -126,7 +126,7 @@ contestsActor {
 
 notificationActor {
   autoStart = false
-  tickInterval = 30 minutes
+  tickInterval = 1 minute
 }
 
 refresherActor {
