--- a/docker/web_role/Dockerfile
+++ b/docker/web_role/Dockerfile
@@ -8,4 +8,4 @@ EXPOSE 9000
 RUN mkdir /app
 WORKDIR /app
 
-CMD target/universal/stage/bin/backend -Dhttp.port=$PORT -Dconfig.resource=$CONFIG_FILE -Dconfig.instanceRole=WEB_ROLE -Dpidfile.path=/dev/null
+CMD bin/backend -Dhttp.port=$PORT -Dconfig.resource=$CONFIG_FILE -Dconfig.instanceRole=WEB_ROLE -Dpidfile.path=/dev/null
