--- a/docker/worker_role/Dockerfile
+++ b/docker/worker_role/Dockerfile
@@ -1,9 +1,9 @@
 FROM dockerfile/java:oracle-java8
 MAINTAINER Federico Mon <gnu.fede@gmail.com>
 
-ENV CONFIG_FILE docker.conf
+ENV CONFIG_FILE docker-worker.conf
 
 RUN mkdir /app
 WORKDIR /app
 
-CMD java -Dconfig.resource=$CONFIG_FILE -Dconfig.instanceRole=WORKER_ROLE -cp "target/universal/stage/lib/*" actors.Actors .
+CMD java -Dconfig.resource=$CONFIG_FILE -Dconfig.instanceRole=WORKER_ROLE -cp "lib/*" actors.Actors .
