Logspout added to send logs to papertrail

--- a/conf/docker-worker.conf
+++ b/conf/docker-worker.conf
@@ -4,4 +4,5 @@ include "docker.conf"
 refresherActor.autoStart = false
 
 botSystemActor.targetUrl = "http://"${WEB_PORT_9000_TCP_ADDR}":9000"
-botSystemActor.autoStart = false
+botSystemActor.autoStart = true
+simulatorActor.autoStart = true
