Pass env variables to cron and expose backups via web

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,10 @@
 
 pgbackup:
   build: docker/pg_backup
+  ports:
+    - "8000"
   environment:
-    PG_PASSWORD: postgres
+    PGPASSWORD: postgres
     POSTGRES_USERNAME: postgres
   volumes:
     - ./docker/pg_backups:/shared
