--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,11 @@
 #  ports:
 #    - "8080"
 
+compiler:
+  build: docker/compiler
+  volumes:
+    - ~/.ssh:/root/.ssh
+
 mongobackup:
   build: docker/mongo_backup
   environment:
