--- a/docker/worker_role/Dockerfile
+++ b/docker/worker_role/Dockerfile
@@ -3,7 +3,8 @@ MAINTAINER Federico Mon <gnu.fede@gmail.com>
 
 ENV CONFIG_FILE docker-worker.conf
 
-RUN mkdir /app
+VOLUME /app
+
 WORKDIR /app
 
 CMD java -Dconfig.resource=$CONFIG_FILE -Dconfig.instanceRole=WORKER_ROLE -cp "lib/*" actors.Actors .
