System mode for web role read from conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -159,3 +159,5 @@ mandrill_key="r-aNtJFwBFub3r5U73RXoA"
 
 // Ejecutamos siempre en nuestra maquina local, pero tenemos la opcion de leer/escribir en otros entornos.
 targetEnvironment="LOCALHOST"     // LOCALHOST, STAGING, PRODUCTION
+
+systemMode="DEVELOPMENT" // DEVELOPMENT, STAGING, PRODUCTION
