--- a/conf/production.conf
+++ b/conf/production.conf
@@ -32,3 +32,4 @@ activate_players_by_default=false
 debug_salary=false
 
 targetEnvironment="LOCALHOST"     // LOCALHOST, STAGING, PRODUCTION
+systemMode="PRODUCTION"
