--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -29,3 +29,4 @@ mandrill_key=${MANDRILL_APIKEY}
 mandrill_username=${MANDRILL_USERNAME}
 
 targetEnvironment="LOCALHOST"     // LOCALHOST, STAGING, PRODUCTION
+systemMode = "STAGING"
