--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,8 @@ appdata:
 tester:
   build: docker/tester
   links:
-    - seleniumchrome
+    - seleniumhub:selenium
+    - seleniumnode
     - web
 
 #seleniumchrome:
@@ -24,8 +25,6 @@ tester:
   
 seleniumhub:
   image: selenium/hub:2.44.0
-  ports:
-    - "4444:4444"
 
 seleniumnode:
   image: selenium/node-chrome-debug:2.44.0
