--- a/conf/application.conf
+++ b/conf/application.conf
@@ -161,3 +161,6 @@ mandrill_key="r-aNtJFwBFub3r5U73RXoA"
 targetEnvironment="LOCALHOST"     // LOCALHOST, STAGING, PRODUCTION
 
 systemMode="DEVELOPMENT" // DEVELOPMENT, STAGING, PRODUCTION
+
+// Fija la fecha global y para por ejemplo poder enseñar el juego fuera de temporada. La interrogacion la hace opcional.
+fakeDate = ${?FAKE_DATE}
