VirtualMatchEventActor + <Player Live Events>.html

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -124,6 +124,11 @@ contestsActor {
   tickInterval = 1 minute
 }
 
+virtualMatchEventActor {
+  autoStart = true
+  tickInterval = 1 minute
+}
+
 notificationActor {
   autoStart = false
   tickInterval = 1 minute
