VirtualSetupActor: actor dedicado a inicializar los partidos simulados

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -124,9 +124,14 @@ contestsActor {
   tickInterval = 1 minute
 }
 
-virtualMatchEventActor {
+virtualSetupActor {
   autoStart = true
   tickInterval = 1 minute
+}
+
+virtualMatchEventActor {
+  autoStart = true
+  tickInterval = 9 seconds
 }
 
 notificationActor {
