VirtualMatchEvent: TimeMultiplier publicado en application.conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -132,6 +132,7 @@ virtualSetupActor {
 virtualMatchEventActor {
   autoStart = true
   tickInterval = 9 seconds
+  timeMultiplier = 10
 }
 
 notificationActor {
