--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -11,7 +11,7 @@ stormpath.currentDirectory = ${stormpath.directories.STAGING}
 heroku_key=${HEROKU_API_KEY}
 heroku_app=${HEROKU_APP_NAME}
 
-rabbitmq=${CLOUDAMQP_URL}
+//rabbitmq=${CLOUDAMQP_URL}
 
 botSystemActor.targetUrl = "http://dailysoccer-staging.herokuapp.com"
 botSystemActor.numBots = 100
@@ -23,7 +23,7 @@ optaProcessorActor.autoStart = false
 contestsActor.autoStart = true
 notificationActor.autoStart = false
 
-refresherActor.autoStart = true
+refresherActor.autoStart = false
 
 mandrill_key=${MANDRILL_APIKEY}
 mandrill_username=${MANDRILL_USERNAME}
