fix Actors: Reactivación de initRabbitMQ. Se apaga desde las opciones de staging.conf

--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -11,6 +11,7 @@ stormpath.currentDirectory = ${stormpath.directories.STAGING}
 heroku_key=${HEROKU_API_KEY}
 heroku_app=${HEROKU_APP_NAME}
 
+// Lo apagamos porque hemos superado el límite que permite la versión gratuita de CloudAMQP
 //rabbitmq=${CLOUDAMQP_URL}
 
 botSystemActor.targetUrl = "http://dailysoccer-staging.herokuapp.com"
@@ -23,7 +24,7 @@ optaProcessorActor.autoStart = false
 contestsActor.autoStart = true
 notificationActor.autoStart = false
 
-refresherActor.autoStart = false
+//refresherActor.autoStart = true
 
 mandrill_key=${MANDRILL_APIKEY}
 mandrill_username=${MANDRILL_USERNAME}
