Production.conf: NotificationActor disabled

--- a/conf/production.conf
+++ b/conf/production.conf
@@ -21,7 +21,7 @@ botSystemActor.autoStart = false
 transactionsActor.autoStart = true
 optaProcessorActor.autoStart = true
 contestsActor.autoStart = true
-notificationActor.autoStart = true
+notificationActor.autoStart = false
 
 refresherActor.autoStart = false  # Por supuesto en produccion no queremos que este actor se tickee
 
