Staging: Logger: INFO

--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -1,6 +1,8 @@
 # http://www.playframework.com/documentation/2.2.x/ProductionConfiguration
 include "application.conf"
 
+logger.application=INFO
+
 mongodb.uri=${MONGOHQ_URL}
 db.default.url=${DATABASE_URL}
 
