PaypalPayment: moreThanGames: Live/Sandbox: CLIENT_ID & SECRET

--- a/conf/production.conf
+++ b/conf/production.conf
@@ -25,6 +25,10 @@ notificationActor.autoStart = false
 
 refresherActor.autoStart = false  # Por supuesto en produccion no queremos que este actor se tickee
 
+paypal.mode = ${PAYPAL_MODE}
+paypal.clientId = ${PAYPAL_CLIENT_ID}
+paypal.secret = ${PAYPAL_SECRET}
+
 mandrill_key=${MANDRILL_APIKEY}
 mandrill_username=${MANDRILL_USERNAME}
 
