--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -26,6 +26,10 @@ optaProcessorActor.autoStart = false
 contestsActor.autoStart = true
 notificationActor.autoStart = false
 
+paypal.mode = ${PAYPAL_MODE}
+paypal.clientId = ${PAYPAL_CLIENT_ID}
+paypal.secret = ${PAYPAL_SECRET}
+
 //refresherActor.autoStart = true
 
 mandrill_key=${MANDRILL_APIKEY}
