--- a/conf/application.conf
+++ b/conf/application.conf
@@ -161,6 +161,11 @@ refresherActor {
   tickInterval = 10 minutes
 }
 
+paypal {
+  mode = "sandbox"
+  clientId = "AaM3eTLHhzmJD1JTCdBB4icrGe0fulPDh_iXYI6t3skJ-kT0OSgbyxZcvSITbZWq2avVd9uKTmsbzERg"
+  secret = "EOlPbhIL-VItHw6uSPo8ltP3Kr-a_S7pm6_y3N-mPmlHohXRCuAkxASVBc6XoE9VN3r-bkfhyfrSFLGJ"
+}
 
 # El conejo encolador de mensajes
 rabbitmq = "amqp://guest:guest@localhost"
