akka: "Highly synchronous": parallelism-min = parallelism-max = 300

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,7 +38,7 @@ application.router=backend.Routes
 # db.default.user=sa
 # db.default.password=""
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost/dailysoccerdb?user=postgres&password=postgres"
+db.default.url="jdbc:postgresql://127.0.0.1/dailysoccerdb?user=postgres&password=postgres"
 
 
 # After attempting to acquire a connection and failing, try to
@@ -85,7 +85,7 @@ logger.play=INFO
 logger.application=DEBUG
 
 # mongodb://[username:password@]host1[:port1][,hostN[:portN]]/dbName
-mongodb.uri="mongodb://localhost:27017/dailySoccerDB"
+mongodb.uri="mongodb://127.0.0.1:27017/dailySoccerDB"
 
 # De momento ponemos max-age a 0 para que interrogue al servidor cada vez que se pulse Refresh o Enter
 # Recordar que: Si max-age!= 0, "refresh" siempre manda requests de nuevo al servidor, pero "enter" no.
@@ -96,10 +96,20 @@ akka {
   # Log the complete configuration at INFO level when the actor system is started.
   # This is useful when you are uncertain of what configuration is used.
   # log-config-on-start = on
+
+  loglevel = WARNING
+  actor {
+    default-dispatcher = {
+      fork-join-executor {
+        parallelism-min = 300
+        parallelism-max = 300
+      }
+    }
+  }
 }
 
 botSystemActor {
-  targetUrl = "http://localhost:9000"    // # La url a la que atacaran nuestros bots para hacer su cosa de bots
+  targetUrl = "http://127.0.0.1:9000"    // # La url a la que atacaran nuestros bots para hacer su cosa de bots
   numBots = 30                           // Hasta 100
   tickInterval = 500 ms                  // Frecuencia de tick
   tickMode = "NORMAL_TICK"               // "NORMAL_TICK", "AGGRESSIVE_TICK"
