application: play.akka

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -108,6 +108,21 @@ akka {
   }
 }
 
+play {
+  akka {
+    akka.loggers = ["akka.event.slf4j.Slf4jLogger"]
+    loglevel = WARNING
+    actor {
+      default-dispatcher = {
+        fork-join-executor {
+          parallelism-min = 300
+          parallelism-max = 300
+        }
+      }
+    }
+  }
+}
+
 botSystemActor {
   targetUrl = "http://127.0.0.1:9000"    // # La url a la que atacaran nuestros bots para hacer su cosa de bots
   numBots = 30                           // Hasta 100
