Staging: logger = DEBUG

--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -1,7 +1,7 @@
 # http://www.playframework.com/documentation/2.2.x/ProductionConfiguration
 include "application.conf"
 
-logger.application=INFO
+logger.application=DEBUG
 
 mongodb.uri=${MONGOHQ_URL}
 db.default.url=${DATABASE_URL}
