application.conf: langs + parallelism-factor

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,7 +9,7 @@ application.secret="<ruwlaV6Xu?`Ls`eU67?6aA6^YvPD3k`aVrglL;@MQRXpOaflH=0EKftJN`n
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="es,en"
 
 # Global object class
 # ~~~~~
@@ -96,16 +96,6 @@ akka {
   # Log the complete configuration at INFO level when the actor system is started.
   # This is useful when you are uncertain of what configuration is used.
   # log-config-on-start = on
-
-  loglevel = WARNING
-  actor {
-    default-dispatcher = {
-      fork-join-executor {
-        parallelism-min = 300
-        parallelism-max = 300
-      }
-    }
-  }
 }
 
 play {
@@ -115,8 +105,8 @@ play {
     actor {
       default-dispatcher = {
         fork-join-executor {
-          parallelism-min = 300
-          parallelism-max = 300
+          parallelism-factor = 3.0
+          parallelism-max = 64
         }
       }
     }
