--- a/conf/application.conf
+++ b/conf/application.conf
@@ -105,8 +105,8 @@ play {
     actor {
       default-dispatcher = {
         fork-join-executor {
-          parallelism-factor = 3.0
-          parallelism-max = 64
+          parallelism-min = 300
+          parallelism-max = 300
         }
       }
     }
