application.conf = parallelism-min = 200 ; parallelism-factor = 200 ; parallelism-max = 1200

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -105,8 +105,9 @@ play {
     actor {
       default-dispatcher = {
         fork-join-executor {
-          parallelism-min = 400
-          parallelism-max = 400
+          parallelism-min = 200
+          parallelism-factor = 200
+          parallelism-max = 1200
         }
       }
     }
