staging.conf / production.conf: Akka: Configuración obtenida de las variables de entorno de Heroku

--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -16,6 +16,10 @@ heroku_app=${HEROKU_APP_NAME}
 // Lo apagamos porque hemos superado el límite que permite la versión gratuita de CloudAMQP
 //rabbitmq=${CLOUDAMQP_URL}
 
+play.akka.actor.default-dispatcher.fork-join-executor.parallelism-factor = ${AKKA_DEFAULT_PARALLELISM_FACTOR}
+play.akka.actor.default-dispatcher.fork-join-executor.parallelism-min = ${AKKA_DEFAULT_PARALLELISM_MIN}
+play.akka.actor.default-dispatcher.fork-join-executor.parallelism-max = ${AKKA_DEFAULT_PARALLELISM_MAX}
+
 botSystemActor.targetUrl = "http://dailysoccer-staging.herokuapp.com"
 botSystemActor.numBots = 100
 botSystemActor.tickInterval = 1 second
