--- a/conf/production.conf
+++ b/conf/production.conf
@@ -13,6 +13,10 @@ heroku_app=${HEROKU_APP_NAME}
 
 rabbitmq=${CLOUDAMQP_URL}
 
+play.akka.actor.default-dispatcher.fork-join-executor.parallelism-factor = ${AKKA_DEFAULT_PARALLELISM_FACTOR}
+play.akka.actor.default-dispatcher.fork-join-executor.parallelism-min = ${AKKA_DEFAULT_PARALLELISM_MIN}
+play.akka.actor.default-dispatcher.fork-join-executor.parallelism-max = ${AKKA_DEFAULT_PARALLELISM_MAX}
+
 botSystemActor.targetUrl = "http://backend.epiceleven.com"
 botSystemActor.numBots = 100
 botSystemActor.tickInterval = 5 seconds
