Global: headers: version_ios && market_app_id_ios

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -167,6 +167,9 @@ paypal {
   secret = "EOlPbhIL-VItHw6uSPo8ltP3Kr-a_S7pm6_y3N-mPmlHohXRCuAkxASVBc6XoE9VN3r-bkfhyfrSFLGJ"
 }
 
+version_ios = "devel"
+market_app_id_ios = ""
+
 # El conejo encolador de mensajes
 rabbitmq = "amqp://guest:guest@localhost"
 
