rename staging & production: MARKET_VERSION_IOS

--- a/conf/production.conf
+++ b/conf/production.conf
@@ -33,7 +33,7 @@ paypal.mode = ${PAYPAL_MODE}
 paypal.clientId = ${PAYPAL_CLIENT_ID}
 paypal.secret = ${PAYPAL_SECRET}
 
-version_ios = ${VERSION_IOS}
+version_ios = ${MARKET_VERSION_IOS}
 market_app_id_ios = ${MARKET_APP_ID_IOS}
 
 mandrill_key=${MANDRILL_APIKEY}
