--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -34,7 +34,7 @@ paypal.mode = ${PAYPAL_MODE}
 paypal.clientId = ${PAYPAL_CLIENT_ID}
 paypal.secret = ${PAYPAL_SECRET}
 
-version_ios = ${VERSION_IOS}
+version_ios = ${MARKET_VERSION_IOS}
 market_app_id_ios = ${MARKET_APP_ID_IOS}
 
 //refresherActor.autoStart = true
