application.conf: version_android + market_app_id_android

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -170,6 +170,9 @@ paypal {
 version_ios = "devel"
 market_app_id_ios = ""
 
+version_android = "devel"
+market_app_id_android = ""
+
 # El conejo encolador de mensajes
 rabbitmq = "amqp://guest:guest@localhost"
 
