--- a/conf/production.conf
+++ b/conf/production.conf
@@ -36,6 +36,9 @@ paypal.secret = ${PAYPAL_SECRET}
 version_ios = ${MARKET_VERSION_IOS}
 market_app_id_ios = ${MARKET_APP_ID_IOS}
 
+version_android = ${MARKET_VERSION_ANDROID}
+market_app_id_android = ${MARKET_APP_ID_ANDROID}
+
 mandrill_key=${MANDRILL_APIKEY}
 mandrill_username=${MANDRILL_USERNAME}
 
