staging.conf & production.conf: NUM_BOTS

--- a/conf/staging.conf
+++ b/conf/staging.conf
@@ -21,7 +21,7 @@ play.akka.actor.default-dispatcher.fork-join-executor.parallelism-min = ${AKKA_D
 play.akka.actor.default-dispatcher.fork-join-executor.parallelism-max = ${AKKA_DEFAULT_PARALLELISM_MAX}
 
 botSystemActor.targetUrl = "http://dailysoccer-staging.herokuapp.com"
-botSystemActor.numBots = 100
+botSystemActor.numBots = ${NUM_BOTS}
 botSystemActor.tickInterval = 1 second
 botSystemActor.autoStart = false
 
