--- a/conf/production.conf
+++ b/conf/production.conf
@@ -18,7 +18,7 @@ play.akka.actor.default-dispatcher.fork-join-executor.parallelism-min = ${AKKA_D
 play.akka.actor.default-dispatcher.fork-join-executor.parallelism-max = ${AKKA_DEFAULT_PARALLELISM_MAX}
 
 botSystemActor.targetUrl = "http://backend.epiceleven.com"
-botSystemActor.numBots = 100
+botSystemActor.numBots = ${NUM_BOTS}
 botSystemActor.tickInterval = 5 seconds
 botSystemActor.autoStart = false
 
