application: tickInterval: 1 second

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -117,7 +117,7 @@ play {
 botSystemActor {
   targetUrl = "http://127.0.0.1:9000"    // # La url a la que atacaran nuestros bots para hacer su cosa de bots
   numBots = 30                           // Hasta 100
-  tickInterval = 500 ms                  // Frecuencia de tick
+  tickInterval = 1 second                // Frecuencia de tick
   tickMode = "NORMAL_TICK"               // "NORMAL_TICK", "AGGRESSIVE_TICK"
   personality = "PRODUCTION"             // "PRODUCTION", "BERSERKER"
   cyclePersonalities = false             // Ciclar por todas las personalidades
