production.conf: botSystemActor.autoStart = true

--- a/conf/production.conf
+++ b/conf/production.conf
@@ -20,7 +20,7 @@ play.akka.actor.default-dispatcher.fork-join-executor.parallelism-max = ${AKKA_D
 botSystemActor.targetUrl = "http://backend.epiceleven.com"
 botSystemActor.numBots = ${NUM_BOTS}
 botSystemActor.tickInterval = 5 seconds
-botSystemActor.autoStart = false
+botSystemActor.autoStart = true
 
 transactionsActor.autoStart = true
 optaProcessorActor.autoStart = true
