application.conf: Model: Switch entre Liga + Premier / Mundial / Eurocopa

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -200,5 +200,8 @@ targetEnvironment="LOCALHOST"     // LOCALHOST, STAGING, PRODUCTION
 
 systemMode="DEVELOPMENT" // DEVELOPMENT, STAGING, PRODUCTION
 
+// Selector de las collections asociadas a unas competiciones (para diferenciar entre La Liga + Premier / Eurocopa o Mundial)
+competitionSelector = "-4/2013"
+
 // Fija la fecha global y para por ejemplo poder enseñar el juego fuera de temporada. La interrogacion la hace opcional.
 fakeDate = ${?FAKE_DATE}
