--- a/conf/production.conf
+++ b/conf/production.conf
@@ -35,9 +35,11 @@ paypal.secret = ${PAYPAL_SECRET}
 
 version_ios = ${MARKET_VERSION_IOS}
 market_app_id_ios = ${MARKET_APP_ID_IOS}
+market_verification_url_ios = ${MARKET_APP_URL_IOS}
 
 version_android = ${MARKET_VERSION_ANDROID}
 market_app_id_android = ${MARKET_APP_ID_ANDROID}
+market_app_key_android = ${MARKET_APP_KEY_ANDROID}
 
 activate_players_by_default=false
 debug_salary=false
